# nfdpw

./: .gitignore  README.md  coldoc_create.py  pyproject.toml  setup.cfg  setup.py
nfldpw/: __init__.py  ids.py  sbowls.py
nfldpw/cache/: __init__.py  cache.py
nfldpw/drafts/: __init__.py  cols.py  drafts.py
nfldpw/pbp/: __init__.py  cols.py  pbp.py
nfldpw/players/: __init__.py  cols.py  ids.py  players.py
nfldpw/rosters/: __init__.py  cols.py  rosters.py
nfldpw/schedules/: __init__.py  cols.py  schedules.py
nfldpw/v1/: sbowls.py
nfldpw/v1/drafts/: __init__.py
nfldpw/v1/pbp/: __init__.py
