[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfldpw"
version = "0.0.1"
license = { file = "LICENSE.txt" }
readme = "README.md"
description="Wrapper for nfl_data_py"
authors = [{ name = "Adam Lynch" }]
dependencies = [
     "nfl_data_py",
     "requests",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Licesnse :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setools]
packages = [
    { include = "nfldpw" },
    { include = "nfldpw.v1" },
    { include = "nfldpw.v1.cache" },
    { include = "nfldpw.v1.pbp" },
    { include = "nfldpw.v1.schedules" },
    { include = "nfldpw.v1.rosters" },
    { include = "nfldpw.v1.players" },
    { include = "nfldpw.v1.drafts" }
]